# os-patches

./: .tag  ABOUT-NLS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  PKG-INFO  aclocal.m4  autogen.sh  check-new-release-gtk  config.h.in  configure  configure.ac  do-release-upgrade  download-grub2  gucharmap.desktop.in.in  hwe-support-status  lsb_release  lsb_release.py  messages.mo  newstrings.desktop.in  pg_ctlcluster  ppa-purge  pre-build.sh  setup.py  ubuntu-support-status  unattended-upgrade  update-manager
.pc/: applied-patches
.pc/51_unity_options_in_display_panel.patch/: configure.ac
.pc/96_sound_nua_panel.patch/: configure.ac
.pc/revert_git_datetime_port.patch/: configure.ac
.pc/revert_git_drop_library.patch/: configure.ac
.pc/revert_git_keyboard_gsettings.patch/: configure.ac
.pc/revert_git_stop_using_gconf.patch/: configure.ac
.pc/revert_ua_gsettings.patch/: configure.ac
AutoUpgradeTester/: install_all_main.py  install_blacklist.cfg
DistUpgrade/: DevelReleaseAnnouncement.html  DistUpgrade.cfg  DistUpgrade.cfg.dapper  DistUpgrade.cfg.hardy  DistUpgrade.cfg.lucid  DistUpgradeAptCdrom.py  DistUpgradeCache.py  DistUpgradeController.py  DistUpgradeQuirks.py  DistUpgradeVersion.py  EOLReleaseAnnouncement.html  ReleaseAnnouncement.html  mirrors.cfg
DistUpgrade/base-installer/: VERSION
HweSupportStatus/: consts.py
UpdateManager/: ChangelogViewer.py  Dialogs.py  GtkProgress.py  UpdateManager.py  UpdatesAvailable.py
UpdateManager/Core/: UpdateList.py  utils.py
UpdateManagerText/: UpdateManagerText.py
aptsources/: distinfo.py  distro.py
d-i/: manifest  sources.list
d-i/source/: partman-lvm_89.tar.xz
data/: 20_ibus.rc  50unattended-upgrades.Ubuntu  DistUpgrade.cfg  Makefile.am  Makefile.in  activity-log-manager-ccpanel.desktop.in  activity-log-manager.desktop.in  apt_check.py  com.ubuntu.update-notifier.gschema.xml.in  com.ubuntu.update-notifier.policy.in  hooks.py  indicator-application.desktop.in  indicator-messages.desktop.in  meta-release  org.freedesktop.Notifications.service.in  org.gnome.settings-daemon.plugins.power.gschema.xml.in.in  package-data-downloads-failed-permanently.in  package-data-downloads-failed.in  package_data_downloader.py  removal_blacklist.cfg  ubuntu-software-center.desktop.in  update-notifier.desktop.in
data/gtkbuilder/: UpdateManager.ui  UpgradePromptDialog.ui
data/handlers/: fglrx.py  nvidia.py
debian/: activity-log-manager-common.install  activity-log-manager-control-center.install  activity-log-manager.install  bzr-builder.manifest  changelog  conffiles  control  control.in  control.rej  directory-list  etc.bash.bashrc  gnome-bluetooth.install  gnome-control-center.sh  jockey-common.postinst  libqt4-declarative.symbols  libqt4-designer.symbols  libqt4-help.symbols  libqt4-network.symbols  libqt4-opengl.symbols  libqt4-qt3support.symbols  libqt4-script.symbols  libqt4-scripttools.symbols  libqt4-svg.symbols  libqt4-xml.symbols  libqt4-xmlpatterns.symbols  libqtcore4.symbols  libqtdbus4.symbols  libqtgui4.symbols  plank-item-ubiquity.install  postinst.in  qt4-dev-tools.install  qt4-qtconfig.install  qtcore4-l10n.install  rules  source_update-manager.py  supported-versions  ubiquity-frontend-gtk.install  update-manager-core.install  update-manager-core.preinst  update-notifier-common.dirs  (+5 more)
debian/grub.d/: 05_debian_theme
debian/patches/: 0001-Don-t-hide-the-titlebar-when-the-window-is-maximized.patch  01_move_to_personal_section.patch  02_handle_upstart_in_whoopsie.patch  02_syncqt_sane_timestamp_for_nonexisting_headers.diff  03_correct_path_to_whoopsie_preferences.patch  04_correct_privacy_policy_url.patch  05_fix_userdirs.patch  07_lp899878.patch  07_trust_dpkg-arch_over_uname-m.diff  08_configure_quilt_compat.diff  12_add_nostrip_for_debug_packages.diff  51_kfreebsd_strnstr_build_fix.diff  96_sound_nua_panel.patch  (+44 more)
etc/: issue  issue.net  lsb-release  os-release
finish-install.d/: 07oem-config-user
jockey/: backend.py  kerneldetection.py  oslib.py  xorg_driver.py
lib/: main.vala
panels/: Makefile.am  Makefile.in
pixmaps/: Makefile.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  ace.po  af.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ceb.po  ckb.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_DE.po  dv.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_ES.po  es_PR.po  et.po  (+97 more)
scripts/: apt-setup  install.py  plugininstall.py
share/: profile  profile.md5sums
shell/: Makefile.am  Makefile.in  cc-shell-category-view.c  cc-shell-category-view.h  ev-window.c  gnome-control-center.c
src/: Makefile.am  Makefile.in  activity-log-manager.c  activity-log-manager.vala  alm-cc.c  alm.c  alm.vala  applications-widget.c  applications-widget.vala  avahi.c  avahi.h  blacklist-dbus.c  blacklist-dbus.vala  bubble.c  cdroms.c  cdroms.h  clipboard.c  crash.c  crash.h  defaults.c  device-menu-mgr.c  diagnostics-widget.c  files-widget.c  files-widget.vala  history-widget.c  history-widget.vala  hooks.c  hooks.h  idousermenuitem.c  profile.vala  release.c  release.h  service.c  stack.c  system-crash.c  system-crash.h  trayappletui.c  trayappletui.h  uevent.c  uevent.h  (+7 more)
src/backend-dbus/: actions.c
src/diagnostics/: Makefile.am  Makefile.in  com.ubuntu.WhoopsiePreferences.service  com.ubuntu.whoopsiepreferences.policy.in  whoopsie-generated.c  whoopsie-generated.h  whoopsie-preferences.c  whoopsie-preferences.xml
src/wallpaper/: wallpaper.c
test/: .coverage  test_lsb_release.py  test_origin_pattern.py
tests/: hybridgraphics.py  indicator-keyboard-test.in  kerneldetection.py  oslib.py  pyflakes.exclude  run  sandbox.py  test_hwe_support_status.py  test_meta_release_core.py  test_misc.py  test_package-data-downloader.py  test_pep8.py  test_stop_update.py  test_ubi_partman.py  test_update_error.py  test_utils.py
ubiquity/: gtkwidgets.py  install_misc.py  misc.py  nm.py
ui/: Makefile.am  Makefile.in
update-motd.d/: 10-help-text
utils/: demoted.cfg.lucid  demoted.cfg.precise  update_mirrors.py
(+368 files in other folders)
